added task controller + tested generic functions
